Modernized WOOgnl. - Resolved compiler warnings and code recommendations - Updated generics information where possible